--- a/python_elective/homework_1/ex.ipynb
+++ b/python_elective/homework_1/ex.ipynb
@@ -311,6 +311,69 @@
     "    m_vec[i]*=scalar\n",
     "print(\"Результат умножения на скаляр:\\n\", m_vec)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e169188b",
+   "metadata": {},
+   "source": [
+    "# Задача 2.4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "76c8bf12",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Матрица:\n",
+      "[1, 2]\n",
+      "[3, 4]\n",
+      "==============================\n",
+      "Вектор:\n",
+      "1\n",
+      "2\n",
+      "Вектор полученный после умножения:\n",
+      "5\n",
+      "11\n"
+     ]
+    }
+   ],
+   "source": [
+    "def matrix_on_vec(matrix, vec):\n",
+    "    res=[]\n",
+    "    for i in range(len(matrix)):\n",
+    "        row_sum=0\n",
+    "        for j in range(len(matrix[i])):\n",
+    "            row_sum+=matrix[i][j]*vec[j]\n",
+    "        res.append(row_sum)\n",
+    "    return res\n",
+    "\n",
+    "row, column = map(int, input(\"Введите размер матрицы, например '2 3': \").split())\n",
+    "matrix = [[0] * column for _ in range(row)]\n",
+    "vec = [0]*row\n",
+    "for i in range(row):\n",
+    "    for j in range(column):\n",
+    "        matrix[i][j] = int(input(f\"Введите значение для индекса матрицы {i} {j}: \"))\n",
+    "print(f\"Матрица:\")\n",
+    "for i in range(len(matrix)):\n",
+    "    print(matrix[i])\n",
+    "print(\"=\"*30)\n",
+    "for i in range(row):\n",
+    "    vec[i] = int(input(f\"Введите значение для индекса Вектора {i}: \"))\n",
+    "print(f\"Вектор:\")\n",
+    "for i in range(len(vec)):\n",
+    "    print(vec[i])\n",
+    "fin_vec=matrix_on_vec(matrix, vec)\n",
+    "print(f\"Вектор полученный после умножения:\")\n",
+    "for i in range(len(fin_vec)):\n",
+    "    print(fin_vec[i])\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
