--- a/python_elective/homework_1/ex.ipynb
+++ b/python_elective/homework_1/ex.ipynb
@@ -237,11 +237,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "6971af55",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Исходный список:\n",
+      "[5, 21, 40, 92, 75, 1, 31, 96, 49, 34, 31, 95, 2, 89, 69, 74, 19, 4, 5, 91]\n",
+      "==================================================\n",
+      "1й бин: *****\n",
+      "2й бин: *\n",
+      "3й бин: *\n",
+      "4й бин: ***\n",
+      "5й бин: **\n",
+      "6й бин: \n",
+      "7й бин: *\n",
+      "8й бин: **\n",
+      "9й бин: *\n",
+      "10й бин: ****\n",
+      "==================================================\n",
+      "Вероятности: \n",
+      "1й бин: 0.25\n",
+      "2й бин: 0.05\n",
+      "3й бин: 0.05\n",
+      "4й бин: 0.15\n",
+      "5й бин: 0.1\n",
+      "6й бин: 0.0\n",
+      "7й бин: 0.05\n",
+      "8й бин: 0.1\n",
+      "9й бин: 0.05\n",
+      "10й бин: 0.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "numbers = [random.randint(0, 100) for _ in range(20)]\n",
+    "print(\"Исходный список:\")\n",
+    "print(numbers)\n",
+    "print(\"=\"*50)\n",
+    "\n",
+    "histogram = [\"\"] * 10\n",
+    "for num in numbers:\n",
+    "    if num!=100:\n",
+    "        histogram[num//10]+=\"*\"\n",
+    "    else:\n",
+    "        histogram[-1]+=\"*\"\n",
+    "\n",
+    "for i in range(len(histogram)):\n",
+    "    print(f\"{i+1}й бин:\",histogram[i])\n",
+    "\n",
+    "probabilities = [len(count) / len(numbers) for count in histogram]\n",
+    "\n",
+    "print(\"=\"*50)\n",
+    "print(\"Вероятности: \")\n",
+    "for i in range(len(probabilities)):\n",
+    "    print(f\"{i+1}й бин:\",probabilities[i])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -374,6 +430,98 @@
     "    print(fin_vec[i])\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b054248",
+   "metadata": {},
+   "source": [
+    "# Задача 2.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70cdf61f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-81, -71, 89, -46, 89, -55, -96, 15, 31, 85]\n",
+      "[89, 89, 89, 89.0, 89, 52.0, 52.0, 15, 31, 31]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "arr = [random.randint(-100, 100) for _ in range(10)]\n",
+    "res=[]\n",
+    "print(\"Массив до изменения:\\n\", arr)\n",
+    "def skip_ind(arr, ind):\n",
+    "    arr_l = arr[:ind]\n",
+    "    arr_l = arr_l[::-1]\n",
+    "    arr_r = arr[ind+1:]\n",
+    "    res1=0\n",
+    "    res2=0\n",
+    "\n",
+    "    for i in range(len(arr_l)):\n",
+    "        if arr_l[i]>0:\n",
+    "            res1+=arr_l[i]\n",
+    "            break\n",
+    "\n",
+    "    for i in range(len(arr_r)):\n",
+    "        if arr_r[i]>0:\n",
+    "            res2+=arr_r[i]\n",
+    "            break\n",
+    "\n",
+    "    if res1==0 or res2==0:\n",
+    "        return max(res1, res2)        \n",
+    "\n",
+    "    if res1+res2==0:\n",
+    "        return arr[ind]\n",
+    "\n",
+    "    return (res1+res2)/2\n",
+    "    \n",
+    "\n",
+    "\n",
+    "if arr[0]<0:\n",
+    "    for i in range(1, len(arr)-1):\n",
+    "        if arr[i] >= 0:\n",
+    "            res.append(arr[i])\n",
+    "            break\n",
+    "else:\n",
+    "    res.append(arr[0])\n",
+    "\n",
+    "for i in range(1, len(arr)-1):\n",
+    "    if arr[i]<0:\n",
+    "        res.append(skip_ind(arr, i))\n",
+    "    else:\n",
+    "        res.append(arr[i])\n",
+    "\n",
+    "for i in range(-2, -len(arr), -1):\n",
+    "    if arr[i]>0:\n",
+    "        res.append(arr[i])\n",
+    "        break\n",
+    "print(\"Массив после изменения:\\n\", res)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65642252",
+   "metadata": {},
+   "source": [
+    "# Задача 2.6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b0f2155",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
