--- a/python_elective/homework_1/ex.ipynb
+++ b/python_elective/homework_1/ex.ipynb
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "70cdf61f",
    "metadata": {},
    "outputs": [
@@ -449,8 +449,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-81, -71, 89, -46, 89, -55, -96, 15, 31, 85]\n",
-      "[89, 89, 89, 89.0, 89, 52.0, 52.0, 15, 31, 31]\n"
+      "Массив до изменения:\n",
+      " [27, 69, -10, -24, 47, -68, 80, 16, 74, -47]\n",
+      "Массив после изменения:\n",
+      " [27, 69, 58.0, 58.0, 47, 63.5, 80, 16, 74, 74]\n"
      ]
     }
    ],
@@ -517,11 +519,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "9b0f2155",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Введите значения для каждой ячейки массива:\n",
+      "Ваш массив:\n",
+      " [1, 4, 2, 3, 2]\n",
+      "Вашо ядро:\n",
+      " [1, 3, 2]\n",
+      "Результат свёртки: \n",
+      " [17, 16, 15]\n"
+     ]
+    }
+   ],
+   "source": [
+    "size_arr = int(input(\"Введите размер массива: \"))\n",
+    "res=[]\n",
+    "print(\"Введите значения для каждой ячейки массива:\")\n",
+    "arr = [int(input(f\"Для {i}го индекса: \")) for i in range(size_arr)]\n",
+    "print(\"Ваш массив:\\n\", arr)\n",
+    "kernel_size = int(input(\"Введите размер ядра (нечётное число): \"))\n",
+    "kernel = [int(input(f\"Для {i}го индекса: \")) for i in range(kernel_size)]\n",
+    "if len(kernel)%2!=1:\n",
+    "    exit\n",
+    "print(\"Вашо ядро:\\n\", kernel)\n",
+    "\n",
+    "for i in range(size_arr-kernel_size+1):\n",
+    "    row_sum=0\n",
+    "    for j in range(kernel_size):\n",
+    "        row_sum+=arr[i+j]*kernel[j]\n",
+    "    res.append(row_sum)\n",
+    "print(\"Результат свёртки: \\n\", res)"
+   ]
   }
  ],
  "metadata": {
