--- a/python_elective/homework_1/ex.ipynb
+++ b/python_elective/homework_1/ex.ipynb
@@ -28,8 +28,11 @@
    ],
    "source": [
     "while True:\n",
-    "    a = int(input())\n",
-    "    b = int(input())\n",
+    "    try:\n",
+    "        a = int(input())\n",
+    "        b = int(input())\n",
+    "    except:\n",
+    "        raise ValueError(\"Not int type\")\n",
     "    print(f\"Sum of two numbers: {a+b}\")"
    ]
   },
