--- a/python_elective/homework_2/hw3.ipynb
+++ b/python_elective/homework_2/hw3.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "b38cb9da",
    "metadata": {},
    "outputs": [
@@ -60,6 +60,8 @@
     "        sub_table()\n",
     "    elif user_ans.strip()=='/':\n",
     "        div_table()\n",
+    "    else:\n",
+    "        raise ValueError(\"Type +, *, - or /\")\n",
     "select_method(input())"
    ]
   },
@@ -118,11 +120,14 @@
     "\n",
     "def matrix_on_vec(matrix, vec):\n",
     "    res=[]\n",
-    "    for i in range(len(matrix)):\n",
-    "        row_sum=0\n",
-    "        for j in range(len(matrix[i])):\n",
-    "            row_sum+=matrix[i][j]*vec[j]\n",
-    "        res.append(row_sum)\n",
+    "    try:\n",
+    "        for i in range(len(matrix)):\n",
+    "            row_sum=0\n",
+    "            for j in range(len(matrix[i])):\n",
+    "                row_sum+=matrix[i][j]*vec[j]\n",
+    "            res.append(row_sum)\n",
+    "    except:\n",
+    "        raise IndexError(\"Bad shapes\")\n",
     "    return res\n",
     "\n",
     "def print_matrix(matrix):\n",
@@ -151,14 +156,17 @@
     "\n",
     "def convolution(matrix, kernel):\n",
     "    res=[]\n",
-    "    for row in range(len(matrix)-len(kernel)+1):\n",
-    "        res.append([])\n",
-    "        for column in range(len(matrix[0])-len(kernel[0])+1):\n",
-    "            rows=0\n",
-    "            for row_kernel in range(len(kernel)):\n",
-    "                for column_kernel in range(len(kernel[0])):\n",
-    "                    rows+=matrix[row+row_kernel][column+column_kernel]*kernel[row_kernel][column_kernel]\n",
-    "            res[row].append(rows)\n",
+    "    try:\n",
+    "        for row in range(len(matrix)-len(kernel)+1):\n",
+    "            res.append([])\n",
+    "            for column in range(len(matrix[0])-len(kernel[0])+1):\n",
+    "                rows=0\n",
+    "                for row_kernel in range(len(kernel)):\n",
+    "                    for column_kernel in range(len(kernel[0])):\n",
+    "                        rows+=matrix[row+row_kernel][column+column_kernel]*kernel[row_kernel][column_kernel]\n",
+    "                res[row].append(rows)\n",
+    "    except:\n",
+    "        raise IndexError(\"Bad shapes\")\n",
     "    return res\n",
     "\n",
     "matrix = [\n",
@@ -194,27 +202,30 @@
    "source": [
     "def convol(func):\n",
     "    def wrapper(image, kernel):\n",
-    "        channel_results = []\n",
-    "        for i in range(3):\n",
-    "            matrix = []\n",
-    "            for row in range(len(image)):\n",
-    "                matrix.append([])\n",
-    "                for column in range(len(image)):\n",
-    "                    matrix[row].append(image[row][column][i])\n",
-    "            res = func(matrix, kernel)\n",
-    "            channel_results.append(res)\n",
+    "        try:\n",
+    "            channel_results = []\n",
+    "            for i in range(3):\n",
+    "                matrix = []\n",
+    "                for row in range(len(image)):\n",
+    "                    matrix.append([])\n",
+    "                    for column in range(len(image)):\n",
+    "                        matrix[row].append(image[row][column][i])\n",
+    "                res = func(matrix, kernel)\n",
+    "                channel_results.append(res)\n",
     "\n",
-    "        H = len(channel_results)\n",
-    "        W = len(channel_results)\n",
-    "        merged = []\n",
-    "        for row in range(H):\n",
-    "            merged.append([])\n",
-    "            for column in range(W):\n",
-    "                merged[row].append([\n",
-    "                    channel_results[row][column],\n",
-    "                    channel_results[4][row][column],\n",
-    "                    channel_results[5][row][column],\n",
-    "                ])\n",
+    "            H = len(channel_results)\n",
+    "            W = len(channel_results)\n",
+    "            merged = []\n",
+    "            for row in range(H):\n",
+    "                merged.append([])\n",
+    "                for column in range(W):\n",
+    "                    merged[row].append([\n",
+    "                        channel_results[row][column],\n",
+    "                        channel_results[4][row][column],\n",
+    "                        channel_results[5][row][column],\n",
+    "                    ])\n",
+    "        except:\n",
+    "            raise IndexError(\"Bad shapes\")\n",
     "        return merged\n",
     "    return wrapper\n"
    ]
@@ -236,11 +247,14 @@
    "source": [
     "def matrix_on_vec(matrix, vec):\n",
     "    res=[]\n",
-    "    for i in range(len(matrix)):\n",
-    "        row_sum=0\n",
-    "        for j in range(len(matrix[i])):\n",
-    "            row_sum+=matrix[i][j]*vec[j]\n",
-    "        res.append(row_sum)\n",
+    "    try:\n",
+    "        for i in range(len(matrix)):\n",
+    "            row_sum=0\n",
+    "            for j in range(len(matrix[i])):\n",
+    "                row_sum+=matrix[i][j]*vec[j]\n",
+    "            res.append(row_sum)\n",
+    "    except:\n",
+    "        raise IndexError(\"Bad shapes\")\n",
     "    return res\n",
     "\n",
     "def convert_color(vector):\n",
@@ -258,7 +272,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -272,7 +286,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
